<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.opentrafficsim</groupId>
  <artifactId>ots-fosim</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>OTS-Fosim</name>
  <description>Coupling of OTS and FOSIM</description>

  <properties>
    <jdk.version>17</jdk.version>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <ots.version>1.8.0</ots.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.opentrafficsim</groupId>
      <artifactId>ots-trafficcontrol</artifactId>
      <version>${ots.version}</version>
    </dependency>
    <dependency>
      <groupId>org.opentrafficsim</groupId>
      <artifactId>ots-swing</artifactId>
      <version>${ots.version}</version>
    </dependency>
    <dependency>
      <groupId>org.sim0mq</groupId>
      <artifactId>sim0mq</artifactId>
      <version>2.2.0</version>
    </dependency>
    <!--dependency>
      <groupId>org.zeromq</groupId>
      <artifactId>jeromq</artifactId>
      <version>0.6.0</version>
    </dependency-->
    <dependency>
      <groupId>org.djutils</groupId>
      <artifactId>djutils-serialization</artifactId>
      <version>2.4.2</version>
    </dependency>
    <dependency>
      <groupId>org.djunits</groupId>
      <artifactId>djunits</artifactId>
      <version>5.4.1</version>
    </dependency>
    <dependency>
      <groupId>org.djutils</groupId>
      <artifactId>djutils-base</artifactId>
      <version>2.4.2</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.9.1</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.10.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

</project>